2016-04-20  Richard Biener  <rguenther@suse.de>

PR tree-optimization/70726
	* tree-vect-stmts.c (vectorizable_shift): Do not use scalar
	shift amounts from a pattern stmt operand.

	* g++.dg/vect/pr70726.cc: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@235236 138bc75d-0d04-0410-961f-82ee72b054a4